# unleashpoem

./: .env.sample  Cargo.toml
migrations/: 20230816185905_add_ulid_function.down.sql  20230816185905_add_ulid_function.up.sql  20230816190200_create_project_table.up.sql  20230816190555_create_addons_table.up.sql  20230816190725_create_users_table.up.sql  20230816191123_create_users_splash_table.down.sql  20230816191123_create_users_splash_table.up.sql  20230816191332_create_users_feedback_table.down.sql  20230816191332_create_users_feedback_table.up.sql  20230816191447_create_events_table.up.sql  20230816191645_create_tag_types_table.down.sql  20230816191645_create_tag_types_table.up.sql  20230816191853_create_tags_table.up.sql  20230816191932_create_settings_table.up.sql  20230816192002_create_strategies_table.down.sql  20230816192002_create_strategies_table.up.sql  20230816192152_add_default_strategies.down.sql  20230816192152_add_default_strategies.up.sql  20230816192700_create_segments_table.up.sql  20230816193230_create_roles_table.up.sql  20230816193411_insert_default_roles.down.sql  20230816193411_insert_default_roles.up.sql  20230816193821_create_role_user_table.up.sql  20230816194115_create_permissions_table.up.sql  20230816194350_create_role_permission_table.down.sql  20230816194350_create_role_permission_table.up.sql  20230816194751_add_default_role_permissions.down.sql  20230816194751_add_default_role_permissions.up.sql  20230816200212_create_reset_tokens_table.down.sql  20230816200212_create_reset_tokens_table.up.sql  (+50 more)
src/: main.rs
