[package]
name = "unleashpoem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["env", "derive"] }
poem = { version = "1.3.57", features = ["tokio-metrics", "opentelemetry", "opentelemetry-prometheus", "chrono", "base64", "xml", "yaml", "serde_yaml"] }
poem-openapi = { version = "3.0.2", features = ["chrono", "email_address", "hostname", "ipnet", "openapi-explorer", "swagger-ui", "rapidoc", "email"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
ulid = "1.0.0"
